fix: create new project
