# openapi3.yaml
@@ -1,11 +1,12 @@
 openapi: 3.0.1
 info:
-  title: service-name
+  title: CRUD API
   description: basic template for map colonies service
   version: 1.0.0
   license:
     name: MIT
     url: https://opensource.org/licenses/MIT
+
 paths:
   /anotherResource:
     get:
@@ -26,19 +27,33 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/error'
-  /resourceName:
+  /products:
     get:
-      operationId: getResourceName
+      operationId: getProducts
       tags:
-        - resourceName
+        - products
+      parameters:
+        - name: name
+          in: query
+          schema:
+            type: string
+        - name: type
+          in: query
+          schema:
+            type: string
+            enum:
+              - raster
+              - rasterized_vector
+              - tiles3d
+              - QMesh
       summary: gets the resource
       responses:
         200:
-          description: OK
+          description: A JSON array of products
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/resource'
+                $ref: '#/components/schemas/Products'
         400:
           description: Bad Request
           content:
@@ -46,23 +61,23 @@ paths:
               schema:
                 $ref: '#/components/schemas/error'
     post:
-      operationId: createResource
+      operationId: createProduct
       tags:
-        - resourceName
-      summary: creates a new record of type resource
+        - products
+      summary: creates a new record of type product
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/resource'
+              $ref: '#/components/schemas/Product'
       responses:
         201:
           description: created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/resource'
+                $ref: '#/components/schemas/Product'
         400:
           description: Bad Request
           content:
@@ -73,6 +88,26 @@ security:
   - {}
 components:
   schemas:
+    GeoJsonPolygon:
+      type: object
+      required:
+        - type
+        - coordinates
+      properties:
+        type:
+          type: string
+          enum:
+            - Polygon
+        coordinates:
+          type: array
+          items:
+            type: array
+            items:
+              type: array
+              minItems: 2
+              maxItems: 2
+              items:
+                type: number
     error:
       type: object
       required:
@@ -80,20 +115,57 @@ components:
       properties:
         message:
           type: string
-    resource:
+    Product:
       type: object
-      required:
-        - id
-        - name
-        - description
       properties:
         id:
-          type: number
-          format: int64
+          type: string
+          format: uuid
         name:
           type: string
+          maxLength: 48
+
         description:
           type: string
+
+        bounding_polygon:
+          $ref: '#/components/schemas/GeoJsonPolygon'
+
+        consumption_link:
+          type: string
+          nullable: true
+
+        resolution_best:
+          type: number
+          format: double
+
+        min_zoom:
+          type: integer
+          minimum: 0
+
+        max_zoom:
+          type: integer
+          minimum: 0
+
+        type:
+          type: string
+          enum:
+            - raster
+            - rasterized_vector
+            - tiles3d
+            - QMesh
+
+        consumption_protocol:
+          type: string
+          enum:
+            - WMS
+            - WMTS
+            - XYZ
+            - 3D Tiles
+    Products:
+      type: array
+      items:
+        $ref: '#/components/schemas/Product'
     anotherResource:
       type: object
       required:
